--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
         "league/flysystem-aws-s3-v3": "^1.0",
-        "maatwebsite/excel": "^3.1",
+        "maatwebsite/excel": "2.1.0",
         "wilsonglasser/laravel-chatapi-whatsapp": "^1.0"
     },
     "require-dev": {
